update activity information on homepage, fix issue with text wrapping under activity image

--- a/source/stylesheets/partials/_home.scss
+++ b/source/stylesheets/partials/_home.scss
@@ -161,6 +161,22 @@ section.home {
       margin-bottom: em(20);
       padding-left: 0px;
       clear: both;
+      .content {
+        float: left;
+        @include media($medium-screen) {
+          @include span-columns(5 of 8);
+        }
+        p {
+          font-size: .9em;
+          &.title {
+            font-size: $base-font-size;
+          }
+        }
+        .date { 
+          font-size: .9em;
+          font-style: italic;
+        }
+      }
       img {
         float: right;
         display: none;
@@ -174,15 +190,6 @@ section.home {
         }
         @include media($medium-screen) {
           display: block;
-        }
-      }
-      p {
-        float: left;
-        &.title {
-          font-size: $base-font-size;
-          @include media($medium-screen) {
-          font-size: 1.25em;
-          }
         }
       }
       
